syntax = "proto3";

package cline;

import "cline/common.proto";

option java_package = "bot.cline.proto";
option java_multiple_files = true;

// Matrix service for processing CAN matrix files
service MatrixService {
  // Process a matrix file and return a URL to the processed file
  rpc processMatrixFile(ProcessMatrixRequest) returns (ProcessMatrixResponse);
  
  // Get a matrix file from storage
  rpc getMatrixFile(GetMatrixFileRequest) returns (GetMatrixFileResponse);
}

// Request message for processing a matrix file
message ProcessMatrixRequest {
  cline.Metadata metadata = 1;
  string file_name = 2;
  bytes file_content = 3;
  int64 file_size = 4;
}

// Response message for processing a matrix file
message ProcessMatrixResponse {
  string file_url = 1;
  repeated string sheet_names = 4;
  string status = 2;  // "success" or "error"
  string error = 3;   // Error message if status is "error"
}

// Request message for getting a matrix file
message GetMatrixFileRequest {
  cline.Metadata metadata = 1;
  string file_name = 2;
}

// Response message for getting a matrix file
message GetMatrixFileResponse {
  bytes file_content = 1;
  string status = 2;  // "success" or "error"
  string error = 3;   // Error message if status is "error"
}